interpreteur/interpreteur.output
État 18 conflits: 1 réduction/réduction


Grammaire

    0 $accept: Start $end

    1 Start: instructions

    2 instructions: instruction instructions
    3             | instruction
    4             | %empty

    5 instruction: tADD tINT tINT tINT
    6            | tMUL tINT tINT tINT
    7            | tSOU tINT tINT tINT
    8            | tDIV tINT tINT tINT
    9            | tCOP tINT tINT tINT
   10            | tAFC tINT tINT tINT
   11            | tLOAD tINT tINT tINT
   12            | tSTORE tINT tINT tINT
   13            | tEQU tINT tINT tINT
   14            | tINF tINT tINT tINT
   15            | tINFE tINT tINT tINT
   16            | tSUP tINT tINT tINT
   17            | tSUPE tINT tINT tINT
   18            | tJMP tINT tINT tINT
   19            | tJMPC tINT tINT tINT


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
tADD (259) 5
tMUL (260) 6
tSOU (261) 7
tDIV (262) 8
tCOP (263) 9
tAFC (264) 10
tLOAD (265) 11
tSTORE (266) 12
tEQU (267) 13
tINF (268) 14
tINFE (269) 15
tSUP (270) 16
tSUPE (271) 17
tJMP (272) 18
tJMPC (273) 19


Non-terminaux, suivis des règles où ils apparaissent

$accept (19)
    à gauche: 0
Start (20)
    à gauche: 1, à droite: 0
instructions (21)
    à gauche: 2 3 4, à droite: 1 2
instruction (22)
    à gauche: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, à droite:
    2 3


État 0

    0 $accept: . Start $end

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 4 (instructions)

    Start         aller à l'état 16
    instructions  aller à l'état 17
    instruction   aller à l'état 18


État 1

    5 instruction: tADD . tINT tINT tINT

    tINT  décalage et aller à l'état 19


État 2

    6 instruction: tMUL . tINT tINT tINT

    tINT  décalage et aller à l'état 20


État 3

    7 instruction: tSOU . tINT tINT tINT

    tINT  décalage et aller à l'état 21


État 4

    8 instruction: tDIV . tINT tINT tINT

    tINT  décalage et aller à l'état 22


État 5

    9 instruction: tCOP . tINT tINT tINT

    tINT  décalage et aller à l'état 23


État 6

   10 instruction: tAFC . tINT tINT tINT

    tINT  décalage et aller à l'état 24


État 7

   11 instruction: tLOAD . tINT tINT tINT

    tINT  décalage et aller à l'état 25


État 8

   12 instruction: tSTORE . tINT tINT tINT

    tINT  décalage et aller à l'état 26


État 9

   13 instruction: tEQU . tINT tINT tINT

    tINT  décalage et aller à l'état 27


État 10

   14 instruction: tINF . tINT tINT tINT

    tINT  décalage et aller à l'état 28


État 11

   15 instruction: tINFE . tINT tINT tINT

    tINT  décalage et aller à l'état 29


État 12

   16 instruction: tSUP . tINT tINT tINT

    tINT  décalage et aller à l'état 30


État 13

   17 instruction: tSUPE . tINT tINT tINT

    tINT  décalage et aller à l'état 31


État 14

   18 instruction: tJMP . tINT tINT tINT

    tINT  décalage et aller à l'état 32


État 15

   19 instruction: tJMPC . tINT tINT tINT

    tINT  décalage et aller à l'état 33


État 16

    0 $accept: Start . $end

    $end  décalage et aller à l'état 34


État 17

    1 Start: instructions .

    $défaut  réduction par utilisation de la règle 1 (Start)


État 18

    2 instructions: instruction . instructions
    3             | instruction .

    tADD    décalage et aller à l'état 1
    tMUL    décalage et aller à l'état 2
    tSOU    décalage et aller à l'état 3
    tDIV    décalage et aller à l'état 4
    tCOP    décalage et aller à l'état 5
    tAFC    décalage et aller à l'état 6
    tLOAD   décalage et aller à l'état 7
    tSTORE  décalage et aller à l'état 8
    tEQU    décalage et aller à l'état 9
    tINF    décalage et aller à l'état 10
    tINFE   décalage et aller à l'état 11
    tSUP    décalage et aller à l'état 12
    tSUPE   décalage et aller à l'état 13
    tJMP    décalage et aller à l'état 14
    tJMPC   décalage et aller à l'état 15

    $end      réduction par utilisation de la règle 3 (instructions)
    $end      [réduction par utilisation de la règle 4 (instructions)]
    $défaut  réduction par utilisation de la règle 3 (instructions)

    instructions  aller à l'état 35
    instruction   aller à l'état 18


État 19

    5 instruction: tADD tINT . tINT tINT

    tINT  décalage et aller à l'état 36


État 20

    6 instruction: tMUL tINT . tINT tINT

    tINT  décalage et aller à l'état 37


État 21

    7 instruction: tSOU tINT . tINT tINT

    tINT  décalage et aller à l'état 38


État 22

    8 instruction: tDIV tINT . tINT tINT

    tINT  décalage et aller à l'état 39


État 23

    9 instruction: tCOP tINT . tINT tINT

    tINT  décalage et aller à l'état 40


État 24

   10 instruction: tAFC tINT . tINT tINT

    tINT  décalage et aller à l'état 41


État 25

   11 instruction: tLOAD tINT . tINT tINT

    tINT  décalage et aller à l'état 42


État 26

   12 instruction: tSTORE tINT . tINT tINT

    tINT  décalage et aller à l'état 43


État 27

   13 instruction: tEQU tINT . tINT tINT

    tINT  décalage et aller à l'état 44


État 28

   14 instruction: tINF tINT . tINT tINT

    tINT  décalage et aller à l'état 45


État 29

   15 instruction: tINFE tINT . tINT tINT

    tINT  décalage et aller à l'état 46


État 30

   16 instruction: tSUP tINT . tINT tINT

    tINT  décalage et aller à l'état 47


État 31

   17 instruction: tSUPE tINT . tINT tINT

    tINT  décalage et aller à l'état 48


État 32

   18 instruction: tJMP tINT . tINT tINT

    tINT  décalage et aller à l'état 49


État 33

   19 instruction: tJMPC tINT . tINT tINT

    tINT  décalage et aller à l'état 50


État 34

    0 $accept: Start $end .

    $défaut  accepter


État 35

    2 instructions: instruction instructions .

    $défaut  réduction par utilisation de la règle 2 (instructions)


État 36

    5 instruction: tADD tINT tINT . tINT

    tINT  décalage et aller à l'état 51


État 37

    6 instruction: tMUL tINT tINT . tINT

    tINT  décalage et aller à l'état 52


État 38

    7 instruction: tSOU tINT tINT . tINT

    tINT  décalage et aller à l'état 53


État 39

    8 instruction: tDIV tINT tINT . tINT

    tINT  décalage et aller à l'état 54


État 40

    9 instruction: tCOP tINT tINT . tINT

    tINT  décalage et aller à l'état 55


État 41

   10 instruction: tAFC tINT tINT . tINT

    tINT  décalage et aller à l'état 56


État 42

   11 instruction: tLOAD tINT tINT . tINT

    tINT  décalage et aller à l'état 57


État 43

   12 instruction: tSTORE tINT tINT . tINT

    tINT  décalage et aller à l'état 58


État 44

   13 instruction: tEQU tINT tINT . tINT

    tINT  décalage et aller à l'état 59


État 45

   14 instruction: tINF tINT tINT . tINT

    tINT  décalage et aller à l'état 60


État 46

   15 instruction: tINFE tINT tINT . tINT

    tINT  décalage et aller à l'état 61


État 47

   16 instruction: tSUP tINT tINT . tINT

    tINT  décalage et aller à l'état 62


État 48

   17 instruction: tSUPE tINT tINT . tINT

    tINT  décalage et aller à l'état 63


État 49

   18 instruction: tJMP tINT tINT . tINT

    tINT  décalage et aller à l'état 64


État 50

   19 instruction: tJMPC tINT tINT . tINT

    tINT  décalage et aller à l'état 65


État 51

    5 instruction: tADD tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 5 (instruction)


État 52

    6 instruction: tMUL tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 6 (instruction)


État 53

    7 instruction: tSOU tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 7 (instruction)


État 54

    8 instruction: tDIV tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 8 (instruction)


État 55

    9 instruction: tCOP tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 9 (instruction)


État 56

   10 instruction: tAFC tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 10 (instruction)


État 57

   11 instruction: tLOAD tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 11 (instruction)


État 58

   12 instruction: tSTORE tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 12 (instruction)


État 59

   13 instruction: tEQU tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 13 (instruction)


État 60

   14 instruction: tINF tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 14 (instruction)


État 61

   15 instruction: tINFE tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 15 (instruction)


État 62

   16 instruction: tSUP tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 16 (instruction)


État 63

   17 instruction: tSUPE tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 17 (instruction)


État 64

   18 instruction: tJMP tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 18 (instruction)


État 65

   19 instruction: tJMPC tINT tINT tINT .

    $défaut  réduction par utilisation de la règle 19 (instruction)
